website test part 2
Working on the website

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <hmtl>
         <head>
                 <title>The Ethics of Algorithms</title>
+                <!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
         </head>
         <body>
                 <nav>
