website test part 3
I clearly have no idea what's going on

--- a/index.html
+++ b/index.html
@@ -1,26 +1,7 @@
-<!DOCTYPE html>
-<hmtl>
-        <head>
-                <title>The Ethics of Algorithms</title>
-                <!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-        </head>
-        <body>
-                <nav>
-                <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about">About</a></li>
-                        <li><a href="/maps">Maps</a></li>
-                </ul>
-                </nav>
-                <div class="container">
+---
+layout: default
+title: The Ethics of Algorithms
+---
                 <div class="blurb">
                         <h1> This is a test.</hi>
                             <p> This is a test paragraph. </p>
-                </div><!--/.blurb -->
-                </div><!-- /.container -->
-                <footer>
-                <p> placeholder footer </p>
-            </footer>
-        </body>
-        </html>
