--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: The Ethics of Algorithms
+title: {{ site.name }}
 ---
-                <div class="blurb">
-                        <h1> This is a test.</hi>
-                            <p> This is a test paragraph. </p>
+
+<div id="home">
+ 
+</div>
