--- a/posts.html
+++ b/posts.html
@@ -9,7 +9,7 @@ permalink: /posts/
   <ul>
   {% for post in site.posts %}
     <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
+      <a href="{{ post.url | prepend: site.github.url }}">{{ post.title }}</a>
     </li>
   {% endfor %}
 </ul>
