--- a/maps_view/simple-assault-geodesic.html
+++ b/maps_view/simple-assault-geodesic.html
@@ -53,22 +53,22 @@ layout: page
 
 <p></p>
 
-<h2>Milwauke Crime Map -- Robbery</h2>
+<h2>Milwauke Crime Map -- Assault</h2>
 <hr />
-<div id='robbery'></div>
+<div id='assault'></div>
 
-<script src="../justin/static/euclidean/ROBBERY_CLUSTERS_2.js"></script>
-<script src="../justin/static/euclidean/ROBBERY_CLUSTERS_3.js"></script>
-<script src="../justin/static/euclidean/ROBBERY_CLUSTERS_4.js"></script>
-<script src="../justin/static/euclidean/ROBBERY_CLUSTERS_5.js"></script>
-<script src="../justin/static/euclidean/ROBBERY_CLUSTERS_6.js"></script>
-<script src="../justin/static/euclidean/ROBBERY_CLUSTERS_7.js"></script>
-<script src="../justin/static/euclidean/ROBBERY_CLUSTERS_8.js"></script>
-<script src="../justin/static/euclidean/ROBBERY_CLUSTERS_9.js"></script>
-<script src="../justin/static/euclidean/ROBBERY_CLUSTERS_10.js"></script>
+<script src="../justin/static/geodesic/SIMPLE%20ASSAULT_CLUSTERS_2.js"></script>
+<script src="../justin/static/geodesic/SIMPLE%20ASSAULT_CLUSTERS_3.js"></script>
+<script src="../justin/static/geodesic/SIMPLE%20ASSAULT_CLUSTERS_4.js"></script>
+<script src="../justin/static/geodesic/SIMPLE%20ASSAULT_CLUSTERS_5.js"></script>
+<script src="../justin/static/geodesic/SIMPLE%20ASSAULT_CLUSTERS_6.js"></script>
+<script src="../justin/static/geodesic/SIMPLE%20ASSAULT_CLUSTERS_7.js"></script>
+<script src="../justin/static/geodesic/SIMPLE%20ASSAULT_CLUSTERS_8.js"></script>
+<script src="../justin/static/geodesic/SIMPLE%20ASSAULT_CLUSTERS_9.js"></script>
+<script src="../justin/static/geodesic/SIMPLE%20ASSAULT_CLUSTERS_10.js"></script>
 
 <script>
-	var map = L.map('robbery').setView([43.0389, -87.9065], 11);
+	var map = L.map('assault').setView([43.0389, -87.9065], 11);
 	var geojson = 0;
 
 	L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
