--- a/maps_view/simple_assault.html
+++ b/maps_view/simple_assault.html
@@ -57,15 +57,15 @@ layout: page
 <hr />
 <div id='assault'></div>
 
-<script src="../justin/static/SIMPLE ASSAULT_CLUSTERS_2.js"></script>
-<script src="../justin/static/SIMPLE ASSAULT_CLUSTERS_3.js"></script>
-<script src="../justin/static/SIMPLE ASSAULT_CLUSTERS_4.js"></script>
-<script src="../justin/static/SIMPLE ASSAULT_CLUSTERS_5.js"></script>
-<script src="../justin/static/SIMPLE ASSAULT_CLUSTERS_6.js"></script>
-<script src="../justin/static/SIMPLE ASSAULT_CLUSTERS_7.js"></script>
-<script src="../justin/static/SIMPLE ASSAULT_CLUSTERS_8.js"></script>
-<script src="../justin/static/SIMPLE ASSAULT_CLUSTERS_9.js"></script>
-<script src="../justin/static/SIMPLE ASSAULT_CLUSTERS_10.js"></script>
+<script src="../justin/static/euclidean/SIMPLE%20ASSAULT_CLUSTERS_2.js"></script>
+<script src="../justin/static/euclidean/SIMPLE%20ASSAULT_CLUSTERS_3.js"></script>
+<script src="../justin/static/euclidean/SIMPLE%20ASSAULT_CLUSTERS_4.js"></script>
+<script src="../justin/static/euclidean/SIMPLE%20ASSAULT_CLUSTERS_5.js"></script>
+<script src="../justin/static/euclidean/SIMPLE%20ASSAULT_CLUSTERS_6.js"></script>
+<script src="../justin/static/euclidean/SIMPLE%20ASSAULT_CLUSTERS_7.js"></script>
+<script src="../justin/static/euclidean/SIMPLE%20ASSAULT_CLUSTERS_8.js"></script>
+<script src="../justin/static/euclidean/SIMPLE%20ASSAULT_CLUSTERS_9.js"></script>
+<script src="../justin/static/euclidean/SIMPLE%20ASSAULT_CLUSTERS_10.js"></script>
 
 <script>
 	var map = L.map('assault').setView([43.0389, -87.9065], 11);
