Fixing map alignment on web page

--- a/maps_view/comparisonMap.html
+++ b/maps_view/comparisonMap.html
@@ -5,14 +5,14 @@ layout: default
     <script>
         function resizeIframe(obj) {
             obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
-            obj.style.width = obj.contentWindow.document.body.scrollWidth + 625 + 'px';
+            obj.style.width = obj.contentWindow.document.body.scrollWidth + 'px';
         }
     </script>
 </head>
 
 <div>
 
-<iframe src="../griffin/KMeans/zipTest.html" frameborder="0" onload="resizeIframe(this)"
+<iframe src="../griffin/KMeans/zipTest.html" frameborder="0" onload="resizeIframe(this) align="left"
         scrolling="no"></iframe>
 
 </div>
