Hopefully, actually fixed the map page allignment

--- a/maps_view/comparisonMap.html
+++ b/maps_view/comparisonMap.html
@@ -12,6 +12,6 @@ layout: default
 
 <div>
 
-<iframe src="../griffin/KMeans/zipTest.html" frameborder="0" onload="resizeIframe(this) align="left" scrolling="no"></iframe>
+<iframe src="../griffin/KMeans/zipTest.html" frameborder="0" onload="resizeIframe(this)" align="left" scrolling="no"></iframe>
 
 </div>
