still trying to fix the map display allignment

--- a/maps_view/comparisonMap.html
+++ b/maps_view/comparisonMap.html
@@ -10,7 +10,7 @@ layout: default
     </script>
 </head>
 
-<div>
+<div align="left">
 
 <iframe src="../griffin/KMeans/zipTest.html" frameborder="0" onload="resizeIframe(this)" align="left" scrolling="no"></iframe>
 
