--- a/maps_view/comparisonMap.html
+++ b/maps_view/comparisonMap.html
@@ -5,7 +5,7 @@ layout: defaultNoMargin
     <script>
         function resizeIframe(obj) {
             obj.style.height = obj.contentWindow.document.body.scrollHeight + 'px';
-            obj.style.width = obj.contentWindow.document.body.scrollWidth + 'px';
+            obj.style.width = obj.contentWindow.document.body.scrollWidth + 200 + 'px';
         }
     </script>
 </head>
