--- a/griffin/KMeans/newDesign.html
+++ b/griffin/KMeans/newDesign.html
@@ -192,9 +192,9 @@
 
 
 
-               //     drawConfusionMatrix(comparison_box, parseInt(idNum), currentK);
+                    //     drawConfusionMatrix(comparison_box, parseInt(idNum), currentK);
 
-               //     drawProbDist(prob_box, e_results, g_results);
+                    //     drawProbDist(prob_box, e_results, g_results);
                     draw_graph(calculateProbabiltyDistribution(e_results), calculateProbabiltyDistribution(g_results));
 
                 }
@@ -581,8 +581,8 @@
                 otherDiv.selectAll('svg').remove();
                 prob_box.selectAll('rect').remove();
                 prob_box.selectAll('text').remove();
-                
-                draw_graph([],[]);
+
+                draw_graph([], []);
                 draw_bias_graph();
 
 
@@ -1002,7 +1002,7 @@
 
             var graph_data = []
             for (var cbox = 0; cbox < checked_list.length; cbox++) {
-                if (k == 0){
+                if (k == 0) {
                     break;
                 }
                 var currentBox = checked_list[cbox];
@@ -1023,7 +1023,7 @@
 
             var chart = bb.generate({
                 'size': {
-                    'height': height/2,
+                    'height': height / 2,
                     'width': width * 1.3
                 },
                 'data': {
@@ -1036,7 +1036,7 @@
                             position: 'outer-center'
                         },
                         'type': 'category',
-                        'categories': full_names,
+                        'categories': short_names,
                         tick: {
                             centered: true,
                             multiline: true,
@@ -1055,9 +1055,8 @@
                 'bindto': '#biasChart'
             });
         }
-draw_graph([],[]);
-draw_bias_graph();
-
+        draw_graph([], []);
+        draw_bias_graph();
     </script>
 
 
