manhattan distance metric (from old repo)

--- a/marielle/KMeans/newDesign.html
+++ b/marielle/KMeans/newDesign.html
@@ -15,7 +15,12 @@
     <script src='zipcodes.js'></script>
     <script src='turf.min.js'></script>
     <script src='halfA.js'></script>
-    <script src='halfB.js'></script>
+    <script src='halfB.js'></script> 
+	<script src='data1.js'></script>
+	<script src='data2.js'></script>
+	<script src='data3.js'></script>
+	<script src='data4.js'></script>
+	<script src='data5.js'></script>
     <script src='bias.js'></script>
 
 </head>
