four map comparison (euclidean, geodesic, manhattan, street)

--- a/marielle/KMeans/pbIndexDisplay.html
+++ b/marielle/KMeans/pbIndexDisplay.html
@@ -14,6 +14,8 @@
     <select id="crime">
     <option value="0" selected="selected">Theft</option>
     <option value="1">Motor Theft</option>
+	<option value="2">Simple Assault</option>
+	<option value="3">Robbery</option>
 </select>
     <script type="text/javascript">
         var label_list = ['t_jan', 't_feb', 't_mar', 't_april', 't_may', 't_june', 't_july',
