added title to plots

--- a/marielle/KMeans/MKEMapComparisonEucGeoMan.html
+++ b/marielle/KMeans/MKEMapComparisonEucGeoMan.html
@@ -85,6 +85,8 @@
 </style>
 
 <body>
+	<h2> Milwaukee Crime Clustering Results </h2>
+	<h3> Please select a K value, a month, a crime type, and a year to see clusters </h3>
     <div>
         <select id="cluster">
     <option value="K0" selected="selected">0</option>
