--- a/katy/KMeans/CrimeMapPreAlpha.html
+++ b/katy/KMeans/CrimeMapPreAlpha.html
@@ -3,15 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Milwaukee Theft Map</title>
+    <title>Milwaukee Crime Map</title>
     <script src='d3/d3.min.js'></script>
     <link rel="stylesheet" href="billboard/billboard.css">
     <script src='billboard/billboard.js'></script>
     <!--adds sidebar functionalities-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <script src='cityLimit.js'>
-
-    </script>
+    <script src='cityLimit.js'></script>
     <!-- <script src='euclid.js'></script>
     <script src='geodesic.js'></script>-->
     <script src='zipcodes.js'></script>
@@ -24,7 +22,8 @@
 	<script src='data4.js'></script>
 	<script src='data5.js'></script> -->
     <script src='bias.js'></script>
-
+<script src="https://cdn.rawgit.com/eligrey/canvas-toBlob.js/f1a01896135ab378aa5c0118eadd81da55e698d8/canvas-toBlob.js"></script>
+	 <script src="https://cdn.rawgit.com/eligrey/FileSaver.js/e9d941381475b5df8b7d7691013401e171014e89/FileSaver.min.js"></script>
 </head>
 <style>
     div.tooltip {
@@ -163,8 +162,10 @@
 <button id="openNav" class="w3-button w3-xlarge" onclick="w3_open()">&#9776;</button>
 <h2>Milwaukee Crime Map </h2>
 
-        </div>
-
+</div>
+<div>
+	<button id='saveButton'>Save</button>
+</div>
 
     <!-- <script type='text/javascript' src=all.js></script> -->
     <script type="text/javascript">
@@ -1236,13 +1237,115 @@ function w3_close() {
   document.getElementById("openNav").style.display = "inline-block";
 }    
 
+<!--save functionality, will write out 'svg' as a png-->
+
+d3.select('#saveButton').on('click', function(){
+	var svgString=getSVGString(d3.select('svg').node());
+	svgString2Image(svgString,width,height, 'png', save);
+	function save(dataBlob, filesize){
+		saveAs(dataBlob, 'CrimeMap.png');
+	}
+});
+function getSVGString( svgNode ) {
+	svgNode.setAttribute('xlink', 'http://www.w3.org/1999/xlink');
+	var cssStyleText = getCSSStyles( svgNode );
+	appendCSS( cssStyleText, svgNode );
+
+	var serializer = new XMLSerializer();
+	var svgString = serializer.serializeToString(svgNode);
+	svgString = svgString.replace(/(\w+)?:?xlink=/g, 'xmlns:xlink='); // Fix root xlink without namespace
+	svgString = svgString.replace(/NS\d+:href/g, 'xlink:href'); // Safari NS namespace fix
+
+	return svgString;
+
+	function getCSSStyles( parentElement ) {
+		var selectorTextArr = [];
+
+		// Add Parent element Id and Classes to the list
+		selectorTextArr.push( '#'+parentElement.id );
+		for (var c = 0; c < parentElement.classList.length; c++)
+				if ( !contains('.'+parentElement.classList[c], selectorTextArr) )
+					selectorTextArr.push( '.'+parentElement.classList[c] );
+
+		// Add Children element Ids and Classes to the list
+		var nodes = parentElement.getElementsByTagName("*");
+		for (var i = 0; i < nodes.length; i++) {
+			var id = nodes[i].id;
+			if ( !contains('#'+id, selectorTextArr) )
+				selectorTextArr.push( '#'+id );
+
+			var classes = nodes[i].classList;
+			for (var c = 0; c < classes.length; c++)
+				if ( !contains('.'+classes[c], selectorTextArr) )
+					selectorTextArr.push( '.'+classes[c] );
+		}
+
+		// Extract CSS Rules
+		var extractedCSSText = "";
+		for (var i = 0; i < document.styleSheets.length; i++) {
+			var s = document.styleSheets[i];
+			
+			try {
+			    if(!s.cssRules) continue;
+			} catch( e ) {
+		    		if(e.name !== 'SecurityError') throw e; // for Firefox
+		    		continue;
+		    	}
+
+			var cssRules = s.cssRules;
+			for (var r = 0; r < cssRules.length; r++) {
+				if ( contains( cssRules[r].selectorText, selectorTextArr ) )
+					extractedCSSText += cssRules[r].cssText;
+			}
+		}
+		
+
+		return extractedCSSText;
+
+		function contains(str,arr) {
+			return arr.indexOf( str ) === -1 ? false : true;
+		}
+
+	}
+
+	function appendCSS( cssText, element ) {
+		var styleElement = document.createElement("style");
+		styleElement.setAttribute("type","text/css"); 
+		styleElement.innerHTML = cssText;
+		var refNode = element.hasChildNodes() ? element.children[0] : null;
+		element.insertBefore( styleElement, refNode );
+	}
+}
+
+
+function svgString2Image( svgString, width, height, format, callback ) {
+	var format = format ? format : 'png';
+
+	var imgsrc = 'data:image/svg+xml;base64,'+ btoa( unescape( encodeURIComponent( svgString ) ) ); // Convert SVG string to data URL
+
+	var canvas = document.createElement("canvas");
+	var context = canvas.getContext("2d");
+
+	canvas.width = width;
+	canvas.height = height;
+
+	var image = new Image();
+	image.onload = function() {
+		context.clearRect ( 0, 0, width, height );
+		context.drawImage(image, 0, 0, width, height);
+
+		canvas.toBlob( function(blob) {
+			var filesize = Math.round( blob.length/1024 ) + ' KB';
+			if ( callback ) callback( blob, filesize );
+		});
+
+		
+	};
+
+image.src = imgsrc;
+};
+
     </script>
-
-
-
-    <!--<div class="graphDisplay">
-    <div id="chart"></div>
-    </div>-->
 </body>
 
 </html>
