moved alpha to maps_view

--- a/maps_view/alpha.html
+++ b/maps_view/alpha.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Milwaukee Crime Map</title>
-		<script src='resources/d3/d3.min.js'></script>
-		<link rel='stylesheet' href='resources/billboard/billboard.css'>
-		<script src='resources/billboard/billboard.js'></script>
+		<script src='../resources/d3/d3.min.js'></script>
+		<link rel='stylesheet' href='../resources/billboard/billboard.css'>
+		<script src='../resources/billboard/billboard.js'></script>
 
 		<link rel='stylesheet' href="https://www.w3schools.com/w3css/4/w3.css">
-		<script src='resources/cityLimit.js'</script>
-		<script src='resources/zipcodes.js'></script>
-		<script src='resources/turf.min.js'></script>
-		<script src='data/bias_data/bias.js'></script>
+		<script src='../resources/cityLimit.js'></script>
+		<script src='../resources/zipcodes.js'></script>
+		<script src='../resources/turf.min.js'></script>
+		<script src='../data/bias_data/bias.js'></script>
 		<script src="https://cdn.rawgit.com/eligrey/canvas-toBlob.js/f1a01896135ab378aa5c0118eadd81da55e698d8/canvas-toBlob.js"></script>
          	<script src="https://cdn.rawgit.com/eligrey/FileSaver.js/e9d941381475b5df8b7d7691013401e171014e89/FileSaver.min.js"></script>
 
