--- a/maps_view/alpha.html
+++ b/maps_view/alpha.html
@@ -143,6 +143,7 @@
 			return {
 				"type": "FeatureCollection",
 				"features": [...g1.features, ...g2.features]
+
 			}
 		}
 
@@ -173,11 +174,11 @@
 						var varName = crimeTypes[k] + "_" + i + "_" + month
 						if (allCrimeClusters === null) {
 							//console.log('setting')
-							allCrimeClusters = window[varName];
+							allCrimeClusters = window['varName'];
 							console.log(Object.keys(window));
 						} else {
 							//console.log('updating')
-							newGeoJSON = window[varName];
+							newGeoJSON = window['varName'];
 							//console.log(allCrimeClusters)
 							allCrimeClusters = concatGeoJSON(allCrimeClusters, newGeoJSON)
 						}
@@ -194,7 +195,7 @@
 			width = 450 - margin.left - margin.right,
 			height = 750 - margin.top - margin.bottom,
 			border = 2, bordercolor = 'black', gap = 30,
-			currentK = 'K0', label = 'Motor Vehicle Theft in Milwaukee';
+			currentK = '0', label = 'Motor Vehicle Theft in Milwaukee';
 
 		var colorList =
 			['#d7191c', '#fdae61', '#ffffbf', '#abd9e9', '#2c7bb6',
@@ -214,22 +215,22 @@
 				var loc = d3.mouse(this);
 				var locSub = [loc[0] - width - gap, loc[1]];
 				var hitHull = 0;
-				if (locSub[0] > 0) {
-					child_g.selectAll('.hull')
-						.each(function (d) {
-							if (d3.polygonContains(d, locSub)) {
-								hitHull = this;
-							}
+				//if (locSub[0] > 0) {
+				//	child_g.selectAll('.hull')
+				//		.each(function (d) {
+				//			if (d3.polygonContains(d, locSub)) {
+				//				hitHull = this;
+				//			}
 
-						});
-				} else {
+				//		});
+				//} else {
 					child.selectAll('.hull')
 						.each(function (d) {
 							if (d3.polygonContains(d, loc)) {
 								hitHull = this;
 							}
 						})
-				}
+				//}
 
 				if (hitHull) {
 					d3.selectAll('.hull')
